--- a/style.css
+++ b/style.css
@@ -147,6 +147,12 @@ li {
   width: 17.99px;
   height: 20px;
 }
+.icon5 {
+  flex: 1;
+  margin-left: 19.01px;
+  width: 14.17px;
+  height: 20px;
+}
 
 
 
