--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: Inter;
-  src: url(Inter-VariableFont_slnt\wght.ttf);
-}
-
 a {
   text-decoration: none;
 }
@@ -35,7 +30,7 @@ li {
   flex: 1;
   display: flex;
   flex-direction: row;
-  margin-top: 25px;
+  margin-top: 29px;
 }
 
 .image {
@@ -48,7 +43,7 @@ li {
 .info1 {
   display: flex;
   width: 375px;
-  height: 590px;
+  height: auto;
   flex-direction: column;
   background-image: url("img/bg1.png");
   background-repeat: no-repeat;
@@ -154,4 +149,9 @@ li {
   margin-left: 19.01px;
   width: 14.17px;
   height: 20px;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url(Inter-VariableFont_slnt\wght.ttf);
 }
