--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ li {
   display: flex;
   flex-direction: row;
   height: 66px;
-  width: 375px;
+
   background-color: white;
 }
 
@@ -42,7 +42,6 @@ li {
 
 .info1 {
   display: flex;
-  width: 375px;
   height: auto;
   flex-direction: column;
   background-image: url("img/bg1.png");
@@ -55,7 +54,7 @@ li {
   display: flex;
   margin-top: 32px;
   flex-direction: column;
-  width: 327px;
+  width: 80%;
   max-height: 192px;
   margin-bottom: 0;
   margin-left: 24px;
@@ -89,7 +88,6 @@ li {
   flex: 1;
   display: flex;
   margin-top: 58px;
-  width: 327px;
   height: 164px;
   margin-left: auto;
   margin-right: auto;
@@ -154,4 +152,7 @@ li {
 @font-face {
   font-family: Inter;
   src: url(Inter-VariableFont_slnt\wght.ttf);
+}
+
+@media screen (max-width: 576px;) {
 }
