--- a/style.css
+++ b/style.css
@@ -158,5 +158,5 @@ body {
   src: url(Inter-VariableFont_slnt\wght.ttf);
 }
 
-@media screen (max-width: 576px;) {
+@media screen (max-width: 576px) {
 }
