--- a/style.css
+++ b/style.css
@@ -11,30 +11,25 @@ li {
   flex-direction: row;
   height: 66px;
   background-color: white;
+  justify-content: space-between;
 }
 
 .wel {
-  flex: 1;
   color: rgba(40, 53, 47, 1);
   font-size: 20px;
-  width: 90px;
   font-weight: 600;
-  margin-right: 209px;
   height: 28px;
   margin-left: 24px;
   margin-top: 22px;
 }
 
 .menu {
-  flex: 1;
   display: flex;
   flex-direction: row;
   margin-top: 29px;
 }
 
 .image {
-  flex: 1;
-  width: 18px;
   height: 16px;
   margin-right: 32px;
 }
