--- a/style.css
+++ b/style.css
@@ -148,3 +148,31 @@ li {
   font-family: Inter;
   src: url(Inter-VariableFont_slnt\wght.ttf);
 }
+
+.actiondiv {
+  flex: 1;
+  display: flex;
+  width: 327px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  margin-top: 64px;
+}
+
+.action {
+  flex: 1;
+  width: 40px;
+  height: 40px;
+}
+
+body {
+  background-color: red;
+}
+
+.main-page {
+  display: flex;
+  flex-direction: column;
+  width: 375px;
+  margin-top: 0;
+  background-color: #fff;
+}
