--- a/style.css
+++ b/style.css
@@ -174,3 +174,114 @@ body {
   margin-top: 0;
   background-color: #fff;
 }
+
+.title {
+  flex: 1;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  width: 327px;
+  height: 97px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 22px;
+}
+
+hr {
+  flex: 1;
+  width: 48px;
+  height: 4px;
+  color: rgba(54, 179, 126, 1);
+  top: 121px;
+  margin-right: auto;
+}
+
+.project_block {
+  display: grid;
+  width: 375px;
+  background-color: #fff;
+  grid-template-areas: "grade1" "grade2" "grade3" "grade4" "grade5" "grade6";
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 24px;
+}
+
+.grade1 {
+  grid-area: grade1;
+  width: 327px;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
+
+.grade2 {
+  grid-area: grade2;
+  width: 327px;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
+
+.grade3 {
+  grid-area: grade3;
+  width: 327px;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
+
+.grade4 {
+  grid-area: grade4;
+  width: 327px;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
+
+.grade5 {
+  grid-area: grade5;
+  height: auto;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
+
+.grade6 {
+  grid-area: grade6;
+  width: 327px;
+  height: auto;
+  background-color: rgba(208, 217, 212, 1);
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 3px;
+}
