--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ hr {
   margin-right: auto;
   width: 122px;
   height: 48px;
-  font-family: Inter;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
