--- a/style.css
+++ b/style.css
@@ -448,10 +448,6 @@ hr {
   margin-bottom: 59px;
 }
 
-.promax1 {
-  flex: 1;
-}
-
 .bloking {
   display: flex;
   flex-direction: column;
@@ -532,7 +528,6 @@ hr {
 
 .gitlab {
   max-width: 37px;
-  margin-left: 8px;
   margin-top: 8px;
   height: 16px;
   padding: 12px;
@@ -540,7 +535,7 @@ hr {
   letter-spacing: 0.03em;
   color: #36b37e;
   border-radius: 10%;
-  margin-left: 40px;
+  margin-left: auto;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
