--- a/style.css
+++ b/style.css
@@ -535,7 +535,7 @@ hr {
   letter-spacing: 0.03em;
   color: #36b37e;
   border-radius: 10%;
-  margin-left: auto;
+  margin-left: 8px;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
