--- a/style.css
+++ b/style.css
@@ -403,6 +403,15 @@ hr {
   margin-top: 29px;
 }
 
+.project:hover {
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+  border-radius: 4px;
+}
+
+.project:active {
+  background-color: #008552;
+}
+
 .about {
   display: flex;
   flex-direction: column;
