--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ hr {
 }
 
 .project:hover {
-  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24)
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
   border-radius: 4px;
 }
 
