--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+:root {
+  --top-header-height: 48px;
+  --default-font-family: "inter", -apple-system, "BlinkMacSystemFont",
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
+    "Helvetica Neue", sans-serif;
+  --theme-green-color: #36b37e;
+  --recent-works-project-height: 474px;
+  --recent-works-text-color: hsl(150, 12%, 26%);
+  --card-bg-color: #ebf0ee;
+  --card-border-color: #d0d9d4;
+}
+
+body * {
+  font-family: var(--default-font-family);
+}
+
 a {
   text-decoration: none;
 }
@@ -42,14 +58,12 @@ li {
   background-repeat: no-repeat;
   background-color: #fff;
   background-size: cover;
-  background-position: center;
 }
 
 .heading {
   display: flex;
   margin-top: 32px;
   flex-direction: column;
-  max-height: 192px;
   margin-bottom: 0;
   margin-left: 24px;
   margin-right: 24px;
@@ -81,8 +95,7 @@ li {
 
 .texting {
   display: flex;
-  margin-top: 30px;
-  height: 164px;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
@@ -106,6 +119,7 @@ li {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  padding-left: 0;
 }
 
 .icon1 {
@@ -152,7 +166,6 @@ li {
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
-  margin-top: 64px;
 }
 
 .action {
@@ -162,618 +175,169 @@ li {
 
 body {
   background-color: #fff;
-  margin: 0;
+  padding: 0 24px;
+  margin: 0 auto;
 }
 
-.main-page {
-  display: flex;
+#my-recent-works {
   flex-direction: column;
-  margin-top: 0;
-  background-color: #fff;
 }
 
-.title {
-  flex: 1;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: bold;
+.section-title-heading {
+  font-weight: 700;
   font-size: 40px;
-  line-height: 52px;
-  width: 327px;
-  height: 97px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  margin-top: 22px;
-}
-
-hr {
-  flex: 1;
-  width: 48px;
-  height: 4px;
-  color: rgba(54, 179, 126, 1);
-  top: 121px;
-  margin-right: auto;
-}
-
-.project_block {
-  display: grid;
-  background-color: #fff;
-  grid-template-areas: "grade1" "grade2" "grade3" "grade4" "grade5" "grade6";
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 24px;
-}
-
-.grade1 {
-  grid-area: grade1;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade2 {
-  grid-area: grade2;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade3 {
-  grid-area: grade3;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade4 {
-  grid-area: grade4;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade5 {
-  grid-area: grade5;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade6 {
-  grid-area: grade6;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.pro {
-  display: flex;
-  margin-top: 252px;
-  max-width: 327px;
-  height: auto;
-  margin-left: 0;
-  flex-direction: column;
-  background-color: #fff;
-  margin-bottom: 0;
-}
-
-.grade-title {
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  max-width: 295px;
-  height: 57px;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  color: #3a4a42;
-}
-
-.rucsht {
-  flex-direction: row;
-  display: flex;
-  margin-left: 55px;
-  margin-right: 40px;
-  height: 32px;
-  max-width: 300px;
-  justify-content: center;
-  margin-top: 16px;
-}
-
-.ruby {
-  min-width: 79px;
-  height: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  padding-right: 12px;
-  color: #3a4a42;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  background-color: rgba(208, 217, 212, 1);
-}
-
-.css {
-  max-width: 21px;
-  height: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  padding-right: 12px;
-  color: #3a4a42;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: 8px;
-}
-
-.javaScript {
-  max-width: 58px;
-  height: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  padding-right: 12px;
-  color: #3a4a42;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: 8px;
-}
-
-.html {
-  max-width: 27px;
-  height: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 12px;
-  padding-right: 12px;
-  color: #3a4a42;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: 8px;
-  margin-right: 50px;
-}
-
-.project {
-  margin-left: auto;
-  margin-right: auto;
-  width: 122px;
-  height: 48px;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-  color: #fff;
-  text-align: center;
-  letter-spacing: 0.03em;
-  padding-bottom: 12px;
-  padding-top: 10px;
-  border: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(54, 179, 127, 1);
-  margin-bottom: 24px;
-  margin-top: 29px;
-}
-
-.project:hover {
-  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
-  border-radius: 4px;
-}
-
-.project:active {
-  background-color: #008552;
-}
-
-.about {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  align-items: center;
-  justify-content: center;
-  background-image: url(back1.svg);
-  background-repeat: no-repeat;
-  background-position-x: right;
-}
-
-.about_title {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 52px;
-  max-width: 351px;
-  height: 48px;
-  margin-top: 68px;
   color: #172b4d;
+  line-height: 52px;
+  margin: 24px 0;
 }
 
-.about_title1 {
-  width: 351px;
-  height: 189px;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 32px;
-  color: #42526e;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+.column-section {
+  margin-top: 62px;
 }
 
-.aboutlink {
-  width: 159px;
-  height: 48px;
-  margin-bottom: 59px;
+.projects,
+#skill-categories {
+  display: grid;
+  row-gap: 24px;
+  padding: 10px 0;
 }
 
-.bloking {
-  display: flex;
+.projects {
+  grid-template-areas: "project";
+}
+
+.projects .project {
+  padding-bottom: 24px;
+}
+
+.projects .project img {
+  background: var(--card-bg-color);
+  width: 100%;
+  height: calc(var(--recent-works-project-height) - 252px);
+}
+
+.projects .project .description-info {
   flex-direction: column;
-  background-color: rgba(208, 217, 212, 1);
+  margin: -8px;
+  background: #ffff;
+  border-radius: 8px 8px 0 0;
+  padding: 0 11px;
 }
 
-.promax1 {
-  background-color: #fff;
-  width: 70px;
-  height: 44px;
-  align-self: center;
-  padding-top: 5px;
-  padding-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-  margin-top: 40px;
-}
-
-.promax2 {
-  background-color: #fff;
-  width: 70px;
-  height: 44px;
-  align-self: center;
-  padding-top: 5px;
-  padding-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-  margin-top: 40px;
-}
-
-.promax3 {
-  background-color: #fff;
-  width: 48px;
-  height: 48px;
-  align-self: center;
-  padding-top: 5px;
-  padding-bottom: 0;
-  margin-left: 140px;
-  margin-right: auto;
-  margin-top: 40px;
-  border-radius: 50%;
-}
-
-.grad {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 600;
+.projects .project .project-details {
   font-size: 24px;
   line-height: 32px;
+  color: var(--recent-works-text-color);
+  font-weight: 600;
+  margin-top: 16px;
+  height: 57px;
 }
 
-.rucsht1 {
+.projects .project .project-languages {
+  display: block;
+  color: var(--recent-works-text-color);
+  padding: 0;
+  margin: 0 auto;
+}
+
+.projects .project .project-languages li {
+  border-radius: 4px;
+  background: var(--card-bg-color);
+  padding: 8px 12px;
+  margin: 8px 0 8px 7px;
+  letter-spacing: 0.03em;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  list-style-type: none;
+  white-space: nowrap;
+  float: left;
+}
+
+.action-btn {
+  border: 0 solid transparent;
+  background: #36b37f;
+  text-decoration: none;
+  font-size: 17px;
+  color: #fff;
+  letter-spacing: 0.03em;
+  padding: 12px;
+  border-radius: 4px;
+  font-weight: 500;
+  margin-top: 13px;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+
+.section-dash-splitter {
+  display: block;
+  clear: both;
+  width: 48px;
+  border: 2px solid var(--theme-green-color);
+  border-radius: 24px;
+}
+
+#about-me-section {
   display: flex;
-  flex-direction: row;
-  margin-bottom: 72px;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  max-width: 300px;
+  flex-direction: column;
+  padding-bottom: 24px;
+  background-image: url("../images/illustration-1-about-me-mobile.svg"),
+    url("../images/illustration-2-about-me-mobile.svg");
+  background-position: top right, bottom left;
+  background-repeat: no-repeat;
 }
 
-.terminal {
-  max-width: 53px;
-  height: 16px;
+#about-me-section .about-me-description {
+  margin-top: 0;
+  padding-bottom: 24px;
+  text-align: center;
+  color: #42526e;
+}
+
+#skill-categories {
+  grid-template-areas: "skill-category";
+  list-style-type: none;
+}
+
+#skill-categories .skill-category {
+  background: var(--card-bg-color);
+}
+
+#skill-categories .skill-category .skill-icon {
+  display: inline-flex;
+  background: #fff;
+  width: 80px;
+  height: 80px;
+  min-height: 80px;
+  border-radius: 50%;
+  margin: 40px 0;
+  box-shadow: 0 16px 24px rgba(37, 47, 137, 0.08);
+}
+
+.skill-icon img {
+  padding-top: 25px;
+}
+
+#skill-categories .skill-category .skill-title {
+  color: #344563;
+  margin: 24px 0;
+}
+
+#skill-categories .skill-category .skill-stack {
+  list-style-type: none;
+  padding: 0;
+  flex-flow: row wrap;
+}
+
+#skill-categories .skill-category .skill-stack li {
   padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 8px;
-  margin-top: 8px;
-  font-style: normal;
-  font-weight: 600;
+  white-space: normal;
+  background: #fff;
   font-size: 12px;
-  line-height: 16px;
-}
-
-.gitlab {
-  max-width: 37px;
-  margin-top: 8px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 40px;
-  font-style: normal;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.github {
-  max-width: 43px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  margin-left: 8px;
-  border-radius: 10%;
-}
-
-.codepen {
-  max-width: 55px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  margin-left: 8px;
-}
-
-.codekit {
-  max-width: 48px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.bootstrap {
-  max-width: 60px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.rubyx {
-  max-width: 31px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 8px;
-}
-
-.rSpec {
-  max-width: 49px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 8px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  margin-right: 30px;
-}
-
-.capybara {
-  max-width: 59px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-top: 8px;
-  margin-left: 40px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.selenium {
-  max-width: 57px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  height: 16px;
-  padding: 12px;
-  margin-left: 8px;
-  background-color: #fff;
-  margin-top: 8px;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-}
-
-.javaScript1 {
-  max-width: 65px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.rubyno {
-  min-width: 79px;
-  height: 16px;
-  padding: 12px;
-  margin-left: 8px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.html1 {
-  max-width: 29px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 8px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-}
-
-.css1 {
-  max-width: 26px;
-  height: 16px;
-  padding: 12px;
-  background-color: #fff;
-  letter-spacing: 0.03em;
-  color: #36b37e;
-  border-radius: 10%;
-  margin-left: 8px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
-  margin-right: 30px;
-}
-
-.project_blockx {
-  display: grid;
-  width: 375px;
-  background-color: #fff;
-  grid-template-areas: "grade11" "grade21" "grade31";
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 24px;
-}
-
-.grade11 {
-  grid-area: grade11;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade21 {
-  grid-area: grade21;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
-}
-
-.grade31 {
-  grid-area: grade31;
-  height: auto;
-  background-color: rgba(208, 217, 212, 1);
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 3px;
+  border-radius: 8px;
+  color: var(--theme-green-color);
+  margin: 8px;
 }
 
 .form {
@@ -784,4 +348,52 @@ hr {
 
 h3 {
   text-align: center;
+  color: #172b4d;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+}
+
+/* General CSS */
+.center-text {
+  text-align: center;
+}
+
+.green-text {
+  color: var(--theme-green-color);
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-cols {
+  flex-direction: column;
+}
+
+.d-inline-flex {
+  display: inline-flex;
+}
+
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.card {
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 24px;
+  border: 1px solid var(--card-border-color);
+}
+
+@media (max-width: 359px) {
+  .info1 {
+    background-size: contain;
+  }
 }
