--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 :root {
   --top-header-height: 48px;
-  --default-font-family: "inter", -apple-system, "BlinkMacSystemFont",
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "Helvetica Neue", sans-serif;
+  --default-font-family: "inter", sans-serif;
   --theme-green-color: #36b37e;
   --recent-works-project-height: 474px;
   --recent-works-text-color: hsl(150, 12%, 26%);
