--- a/style.css
+++ b/style.css
@@ -451,11 +451,57 @@ textarea::placeholder {
   border-radius: 8px;
   width: fit-content;
   align-items: center;
-  
+  text-align: right;
+  color:white;
+
+
+
 }
 
 
+.icons1 {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  padding-left: 0;
+}
 
+.icon11 {
+  height: 19.96px;
+}
+
+.icon21 {
+  margin-left: 19.78px;
+  width: 20px;
+  height: 20px;
+}
+
+.icon31 {
+  margin-left: 20px;
+  width: 20px;
+  height: 16px;
+  margin-top: 4px;
+}
+
+.icon41 {
+  margin-left: 20px;
+  width: 17.99px;
+  height: 20px;
+}
+
+.icon51 {
+  margin-left: 19.01px;
+  width: 14.17px;
+  height: 20px;
+}
+
+label {
+    display: flex;
+    width: 375px;
+    text-align: right;
+  }
 
 
 
