--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
   --card-border-color: #d0d9d4;
 }
 
+* {
+  border-box: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body * {
   font-family: var(--default-font-family);
 }
@@ -397,6 +403,11 @@ h3 {
   }
 }
 
+.contact-section {
+  margin: 0 -24px;
+  padding: 20px 24px;
+}
+
 .contact-container {
   display: flex;
   flex-direction: column;
@@ -412,50 +423,58 @@ h3 {
   padding: 5px;
 }
 
-.input-section li input {
-  width: 90%;
+.input-section {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+}
+
+.input-section ul {
+  max-width: 100%;
+}
+
+.input-section ul li input {
+  width: 100%;
+  box-sizing: border-box;
   background: #fff;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
   padding: 16px;
+  margin-bottom: 5px;
   font-size: 17px;
   line-height: 20px;
-  color: #172B4D;
-  margin-bottom: 18px;
+  color: #172b4d;
 }
-.input-section li textarea {
+
+.input-section textarea {
   margin-bottom: 4px;
   width: 100%;
+  box-sizing: border-box;
   background: #fff;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
   padding: 16px;
   font-size: 17px;
   line-height: 20px;
-  color: #172B4D;
+  color: #172b4d;
 }
+
 input::placeholder,
 textarea::placeholder {
   font-weight: normal;
   font-size: 15px;
   line-height: 24px;
-  color: #B3BAC5;
+  color: #b3bac5;
 }
+
 .input-section .btn {
   padding: 12px 16px;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  background: #36B37F;
+  background: #fff;
   border-radius: 8px;
   width: fit-content;
-  align-items: center;
-  text-align: right;
-  color:white;
-
-
-
 }
 
 
@@ -497,11 +516,6 @@ textarea::placeholder {
   height: 20px;
 }
 
-label {
-    display: flex;
-    width: 375px;
-    text-align: right;
-  }
 
 
 
