--- a/style.css
+++ b/style.css
@@ -428,6 +428,9 @@ h3 {
   flex-direction: column;
   align-items: center;
   margin-bottom: 40px;
+  background-image: url(./illustration-contact-form.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 .input-section ul {
@@ -460,6 +463,7 @@ h3 {
   font-size: 17px;
   line-height: 20px;
   color: #172b4d;
+  outline: none;
 }
 
 input::placeholder,
@@ -491,6 +495,7 @@ textarea::placeholder {
   margin-right: auto;
   justify-content: center;
   padding-left: 0;
+  margin-bottom: 10px;
 }
 
 .icon11 {
@@ -557,7 +562,7 @@ textarea::placeholder {
   border-radius: 4px;
 }
 
-.my-my-nm:hover {
+.my-nm:hover {
   background: #FFFFFF;
   border: 1px solid #D0D9D4;
   box-sizing: border-box;
