--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ h3 {
   align-items: center;
   margin: 0;
 }
+
 .contact-container h3 {
   font-weight: 700;
   font-size: 40px;
@@ -546,28 +547,28 @@ textarea::placeholder {
 }
 
 .my-msg:hover {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #60c095;
   box-sizing: border-box;
   border-radius: 4px;
 }
 
 .my-add:hover {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #d0d9d4;
   box-sizing: border-box;
   border-radius: 4px;
 }
 
 .my-nm:hover {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #d0d9d4;
   box-sizing: border-box;
   border-radius: 4px;
 }
 
 .foot-mail {
-  font-family: Inter;
+  font-family: 'inter', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
