--- a/style.css
+++ b/style.css
@@ -616,9 +616,9 @@ textarea::placeholder {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-image: url(./img/Header-llustration-desktop.svg);
-    background-image:url(./img/theo.png)
+    background-image: url(./Microverse-Student-Project-1/Header-llustration-desktop@2x.png),
+      url(./Microverse-Student-Project-1/Header-llustration-desktop.svg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
   }
 }
