--- a/style.css
+++ b/style.css
@@ -210,8 +210,9 @@ h1 span {
 }
 
 .about-section {
-  background-image: url(./IMG/img/illustration2.svg),
-    url(./IMG/img/illustration.svg);
+  background-image:
+  url(./IMG/img/illustration2.svg),
+  url(./IMG/img/illustration.svg);
   background-position: top right, bottom left;
   background-repeat: no-repeat, no-repeat;
   position: relative;
@@ -442,9 +443,10 @@ hr {
 
   .footer-nav {
     margin-top: 10%;
-    background-image: url('IMG/img/imgSub/footing-bg-1-desktop.svg'),
-      url('IMG/img/imgSub/footing-bg-2-desktop.svg'),
-      url('IMG/img/imgSub/footing-bg-3-desktop.svg');
+    background-image:
+	url('IMG/img/imgSub/footing-bg-1-desktop.svg'),
+    url('IMG/img/imgSub/footing-bg-2-desktop.svg'),
+    url('IMG/img/imgSub/footing-bg-3-desktop.svg');
     background-position: bottom left, 13rem bottom, bottom right;
     background-size: 10%;
     display: flex;
