--- a/style.css
+++ b/style.css
@@ -210,9 +210,8 @@ h1 span {
 }
 
 .about-section {
-  background-image:
-      url(./IMG/img/illustration2.svg), 
-     url(./IMG/img/illustration.svg);
+  background-image: url(./IMG/img/illustration2.svg),
+    url(./IMG/img/illustration.svg);
   background-position: top right, bottom left;
   background-repeat: no-repeat, no-repeat;
   position: relative;
@@ -443,8 +442,7 @@ hr {
 
   .footer-nav {
     margin-top: 10%;
-    background-image:
-     url('IMG/img/imgSub/footing-bg-1-desktop.svg'),
+    background-image: url('IMG/img/imgSub/footing-bg-1-desktop.svg'),
       url('IMG/img/imgSub/footing-bg-2-desktop.svg'),
       url('IMG/img/imgSub/footing-bg-3-desktop.svg');
     background-position: bottom left, 13rem bottom, bottom right;
