--- a/style.css
+++ b/style.css
@@ -210,8 +210,9 @@ h1 span {
 }
 
 .about-section {
-  background-image: url(./IMG/img/illustration2.svg),
-    url(./IMG/img/illustration.svg);
+  background-image:
+  url(./IMG/img/illustration2.svg),
+  url(./IMG/img/illustration.svg);
   background-position: top right, bottom left;
   background-repeat: no-repeat, no-repeat;
   position: relative;
