--- a/style.css
+++ b/style.css
@@ -441,7 +441,8 @@ hr {
 
   .footer-nav {
     margin-top: 10%;
-    background-image: url('IMG/footing-bg-1-desktop.svg'),
+    background-image: 
+      url('IMG/footing-bg-1-desktop.svg'),
       url('IMG/footing-bg-2-desktop.svg'), url('IMG/footing-bg-3-desktop.svg');
     background-position: bottom left, 13rem bottom, bottom right;
     background-size: 10%;
