--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ hr {
     margin-top: 10%;
     background-image: 
       url('.img/footing-bg-1-desktop.svg'),
-      url('./img/footing-bg-2-desktop.svg'), url('./img/footing-bg-3-desktop.sg');
+      url('./img/footing-bg-2-desktop.svg'), url('./img/footing-bg-3-desktop.svg');
     background-position: bottom left, 13rem bottom, bottom right;
     background-size: 10%;
     display: flex;
