--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
   scroll-behavior: smooth;
 }
 
-header {
+.heading-element {
   display: flex;
   justify-content: space-between;
   margin: 24px 24px 0 24px;
@@ -28,7 +28,6 @@ header {
   height: 100vh;
   width: 100%;
   list-style: none;
-  border: 2px solid;
 }
 
 .collapse {
